--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=4300
 MONGO_URI =mongodb+srv://keshu:keshu@admin.mifom.mongodb.net/
 
 
-JWT_SECRET_KEY=kdkdkdkd
+JWT_SECRET_KEY=jgvcbmnxbnd
 
 
 # -------cloudinary-------
